updated index, reformated and added nav bar

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -37,6 +37,34 @@
     </head>
 
     <body>
+<!-- Nav bar starts here-->          
+        <!-- <div class="row">
+            <div class="box2">
+                <div class="col-lg-12"> -->
+
+                    <nav class="navbar navbar-default">
+                        <div >
+
+                      
+                          <!-- Collect the nav links, forms, and other content for toggling -->
+                          <div >
+                            <ul class="nav navbar-nav">
+                              <li><a href="#">Home </a></li>
+                              <li><a href="#">About</a></li>
+                              <li><a href="services.html">Services</a></li>
+                              <li><a href="facilities.html">Facilities</a></li>
+                              <li><a href="contact.html">Contact</a></li>
+                            </ul>
+
+                          </div><!-- /.navbar-collapse -->
+                        </div><!-- /.container-fluid -->
+                      </nav>
+                <!-- </div>
+            </div>
+        </div> -->
+
+
+
         <div class="brand">Bodywork Spa of Dracut</div>
 
         <div class="address-bar">465 Nashua Rd., Dracut, MA 01826 | 978-656-8601</div>
@@ -46,11 +74,6 @@
                 <div class="box">
                     <div class="col-lg-12 text-center">
                         <img class="img-responsive img-full" src="img/cple_tbl.jpg" alt="" />
-
-                        <h2 class="brand-before">
-                            <small>Welcome to</small>
-                        </h2>
-                        <h1 class="brand-name">Bodywork Spa of Dracut</h1>
                     </div>
                 </div>
             </div>
@@ -59,76 +82,43 @@
                 <div class="box">
                     <div class="col-lg-12">
                         <hr />
-                        <h2 class="text-center">About Us</h2>
+
+                        <h2 class="brand-before  text-center">
+                            <small>Welcome to</small>
+                        </h2>
+                        <h1 class="brand-name  text-center">Bodywork Spa of Dracut</h1>                        
                         <hr />
-                        <p class="text-center">
-                            A full service body massage spa. 
+                        <br>
+                            Here at Body Work Spa of Dracut, we provide a range of massage services such as deep tissue, swedish, reflexology, hot stone, couples and foot treatments. 
+                        <br>
+                        <br>
+                            You can find us and schedule an appointment by clicking the "Contact Us" link. 
+                             Please click the links below to learn more about our services, our facilities, what to expect and more. 
                         </p>
                         <div class="col-md-3">
                             <hr />
-                            <h3 class="text-center">Services</h3>
-                            <hr />
-                            <p class="text-center">
-                                <ul class="text-center list-unstyled">                            
-                                    <li class="list-unstyled">Deep Tissue</li>
-                                    <li class="list-unstyled">Swedish</li>
-                                    <li class="list-unstyled">Reflexology</li>
-                                    <li class="list-unstyled">Hot Stone</li>
-                                    <li class="list-unstyled">Couples Massage</li>
-                                    <li class="list-unstyled">Foot</li>
-                                    <li class="list-unstyled"></li>
-                                </ul>
-                            <hr class="visible-xs" />
-
-                            <p></p>
+                            <h3 class="text-center"><a href="services.html" class="mainlinks">Services</a></h3>
+                            <hr />                            
                         </div>
                         <div class="col-md-3">
                             <hr />
-                            <h3 class="text-center">Rates</h3>
+                            <h3 class="text-center"><a href="facilities.html" class="mainlinks">Facilities</a></h3>
                             <hr />
-                            <h3 class=" text-center">Bodywork</h3>
-                            <p class="text-center">
-                                <ul class="text-center list-unstyled">
-                                    <li class="list-unstyled">30 minutes   -    $50.00</li>
-                                    <li class="list-unstyled">60 minutes   -    $70.00</li>
-                                    <li class="list-unstyled">90 minutes   -   $100.00</li>        
-                                </ul>
-                            </p>
-                            <h3 class=" text-center">Foot</h3>
-                            <p class="text-center">
-                                <ul class="text-center list-unstyled">
-                                    <li class="list-unstyled">30 minutes   -    $30.00</li>
-                                    <li class="list-unstyled">60 minutes   -    $50.00</li>
-                                </ul>
-                            </p>                            
-                            <hr class="visible-xs" />
 
-                            <p></p>
-                        </div>
-                        <div class="col-md-3">
-                            <hr />
-                            <h3 class="text-center">Our Facilities</h3>
-                            <hr />
-                            <hr class="visible-xs" />
-
-                            <p></p>
                         </div>
                         <div class="col-md-3">
                             <hr />
                             <h3 class="text-center">What to Expect</h3>
                             <hr />
-                            <hr class="visible-xs" />
-
-                            <p></p>                            
-
+                        </div>
+                        <div class="col-md-3">
+                            <hr />
+                            <h3 class="text-center">More Info</h3>
+                            <hr />
                         </div>
                     </div>
                 </div>
-                <hr />
-                <hr />
-                <hr />
-                <hr />
-                <hr />
+
             </div>
 
             <div class="row">
@@ -143,9 +133,9 @@
                     </div>
 
                     <div class="col-lg-12">
-                        <p>Address: <strong>465 Nashua Rd., Dracut, MA 01826</strong></p>
+                        <p class="text-center">Address: <strong>465 Nashua Rd., Dracut, MA 01826</strong></p>
 
-                        <p>
+                        <p class="text-center">
                             Phone: <strong>978-656-8601</strong> <br />
 
                             Business Hours: <strong>9:30 AM - 9:00 PM</strong> <br />
