Updated  home page

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -37,33 +37,30 @@
     </head>
 
     <body>
-<!-- Nav bar starts here-->          
+        <!-- Nav bar starts here-->
         <!-- <div class="row">
             <div class="box2">
                 <div class="col-lg-12"> -->
 
-                    <nav class="navbar navbar-default">
-                        <div >
-
-                      
-                          <!-- Collect the nav links, forms, and other content for toggling -->
-                          <div >
-                            <ul class="nav navbar-nav">
-                              <li><a href="#">Home </a></li>
-                              <li><a href="#">About</a></li>
-                              <li><a href="services.html">Services</a></li>
-                              <li><a href="facilities.html">Facilities</a></li>
-                              <li><a href="contact.html">Contact</a></li>
-                            </ul>
-
-                          </div><!-- /.navbar-collapse -->
-                        </div><!-- /.container-fluid -->
-                      </nav>
-                <!-- </div>
+        <nav class="navbar navbar-default">
+            <div>
+                <!-- Collect the nav links, forms, and other content for toggling -->
+                <div>
+                    <ul class="nav navbar-nav">
+                        <li><a href="#">Home </a></li>
+                        <li><a href="#">About</a></li>
+                        <li><a href="services.html">Services</a></li>
+                        <li><a href="facilities.html">Facilities</a></li>
+                        <li><a href="contact.html">Contact</a></li>
+                    </ul>
+                </div>
+                <!-- /.navbar-collapse -->
+            </div>
+            <!-- /.container-fluid -->
+        </nav>
+        <!-- </div>
             </div>
         </div> -->
-
-
 
         <div class="brand">Bodywork Spa of Dracut</div>
 
@@ -83,28 +80,32 @@
                     <div class="col-lg-12">
                         <hr />
 
-                        <h2 class="brand-before  text-center">
+                        <h2 class="brand-before text-center">
                             <small>Welcome to</small>
                         </h2>
-                        <h1 class="brand-name  text-center">Bodywork Spa of Dracut</h1>                        
+                        <h1 class="brand-name text-center">Bodywork Spa of Dracut</h1>
                         <hr />
-                        <br>
-                            Here at Body Work Spa of Dracut, we provide a range of massage services such as deep tissue, swedish, reflexology, hot stone, couples and foot treatments. 
-                        <br>
-                        <br>
-                            You can find us and schedule an appointment by clicking the "Contact Us" link. 
-                             Please click the links below to learn more about our services, our facilities, what to expect and more. 
+                        <p>
+                            <br />
+                            Here at Bodywork Spa of Dracut, we provide a range of massage services such as deep tissue,
+                            swedish, reflexology, hot stone, couples and foot treatments.
+                            <br />
+                            <br />
+                            You can find us and schedule an appointment by clicking the "Contact" link.
+                            <br />
+                            <br />
+                            Please click the links below to learn more about our "Services", our "Facilities", "What to
+                            Expect" and "More Info".
                         </p>
                         <div class="col-md-3">
                             <hr />
                             <h3 class="text-center"><a href="services.html" class="mainlinks">Services</a></h3>
-                            <hr />                            
+                            <hr />
                         </div>
                         <div class="col-md-3">
                             <hr />
                             <h3 class="text-center"><a href="facilities.html" class="mainlinks">Facilities</a></h3>
                             <hr />
-
                         </div>
                         <div class="col-md-3">
                             <hr />
@@ -118,7 +119,6 @@
                         </div>
                     </div>
                 </div>
-
             </div>
 
             <div class="row">
