--- a/public_html/index.html
+++ b/public_html/index.html
@@ -48,7 +48,7 @@
                 <div>
                     <ul class="nav navbar-nav">
                         <li><a href="#">Home </a></li>
-                        <li><a href="#">About</a></li>
+                        <li><a href="about.html">About</a></li>
                         <li><a href="services.html">Services</a></li>
                         <li><a href="facilities.html">Facilities</a></li>
                         <li><a href="contact.html">Contact</a></li>
@@ -78,20 +78,21 @@
             <div class="row">
                 <div class="box">
                     <div class="col-lg-12">
-                        <hr />
+                        <hr class="hr-long" />
 
                         <h2 class="brand-before text-center">
                             <small>Welcome to</small>
                         </h2>
                         <h1 class="brand-name text-center">Bodywork Spa of Dracut</h1>
-                        <hr />
+                        <hr class="hr-long" />
                         <p>
                             <br />
-                            Here at Bodywork Spa of Dracut, we provide a range of massage services such as deep tissue,
-                            swedish, reflexology, hot stone, couples and foot treatments.
+                            Here at Bodywork Spa of Dracut, we provide a range of massage services for both men and
+                            women, such as deep tissue, swedish, reflexology, hot stone, couples and foot treatments.
                             <br />
                             <br />
-                            You can find us and schedule an appointment by clicking the "Contact" link.
+                            You can find us and schedule an appointment by clicking the "Contact" link at the top of the
+                            page.
                             <br />
                             <br />
                             Please click the links below to learn more about our "Services", our "Facilities", "What to
@@ -99,22 +100,22 @@
                         </p>
                         <div class="col-md-3">
                             <hr />
-                            <h3 class="text-center"><a href="services.html" class="mainlinks">Services</a></h3>
+                            <h2 class="text-center"><a href="services.html" class="mainlinks">Services</a></h2>
                             <hr />
                         </div>
                         <div class="col-md-3">
                             <hr />
-                            <h3 class="text-center"><a href="facilities.html" class="mainlinks">Facilities</a></h3>
+                            <h2 class="text-center"><a href="facilities.html" class="mainlinks">Facilities</a></h2>
                             <hr />
                         </div>
                         <div class="col-md-3">
                             <hr />
-                            <h3 class="text-center">What to Expect</h3>
+                            <h2 class="text-center"><a href="expect.html" class="mainlinks">What to Expect</a></h2>
                             <hr />
                         </div>
                         <div class="col-md-3">
                             <hr />
-                            <h3 class="text-center">More Info</h3>
+                            <h2 class="text-center"><a href="more_info.html" class="mainlinks">More Info</a></h2>
                             <hr />
                         </div>
                     </div>
