--- a/public_html/about.html
+++ b/public_html/about.html
@@ -50,7 +50,7 @@
                         <li><a href="index.html">Home </a></li>
                         <li><a href="#">About</a></li>
                         <li><a href="services.html">Services</a></li>
-                        <li><a href="#">Facilities</a></li>
+                        <li><a href="facilities.html">Facilities</a></li>
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </div>
