--- a/public_html/contact.html
+++ b/public_html/contact.html
@@ -48,7 +48,7 @@
                 <div>
                     <ul class="nav navbar-nav">
                         <li><a href="index.html">Home </a></li>
-                        <li><a href="#">About</a></li>
+                        <li><a href="about.html">About</a></li>
                         <li><a href="services.html">Services</a></li>
                         <li><a href="facilities.html">Facilities</a></li>
                         <li><a href="#">Contact</a></li>
@@ -84,7 +84,7 @@
                 <div class="box">
                     <div class="col-lg-12">
                         <hr />
-                        <h2 class="text-center">Contat Us</h2>
+                        <h2 class="text-center">Contact Us</h2>
                         <hr />
                         <p class="text-center">Address, phone number, map, directions and hours.</p>
                     </div>
