--- a/public_html/facilities.html
+++ b/public_html/facilities.html
@@ -48,7 +48,7 @@
                 <div>
                     <ul class="nav navbar-nav">
                         <li><a href="index.html">Home </a></li>
-                        <li><a href="#">About</a></li>
+                        <li><a href="about.html">About</a></li>
                         <li><a href="services.html">Services</a></li>
                         <li><a href="#">Facilities</a></li>
                         <li><a href="contact.html">Contact</a></li>
