updates to the  expectations page

--- a/public_html/expect.html
+++ b/public_html/expect.html
@@ -48,9 +48,9 @@
                 <div>
                     <ul class="nav navbar-nav">
                         <li><a href="index.html">Home </a></li>
-                        <li><a href="#">About</a></li>
+                        <li><a href="about.html">About</a></li>
                         <li><a href="services.html">Services</a></li>
-                        <li><a href="#">Facilities</a></li>
+                        <li><a href="facilities.html">Facilities</a></li>
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </div>
@@ -96,25 +96,93 @@
             <div class="row">
                 <div class="box">
                     <div class="col-xs-6">
-                        <img class="img-responsive img-full" src="img/IMG_0253_2.jpg" alt="" />
+                        <hr class="hr-long" />
+                        <h2 class="text-center">What to expect from your massage</h2>
+                        <hr class="hr-long" />
+                        <ul>
+                            <li>
+                                Mutual respect, courtesy, professionalism, confidentiality and dignity between you and
+                                the massage therapist.
+                            </li>
+                            <li>
+                                A licensed/registered/certified professional massage therapist, working within their
+                                scope of practice and in an ethical manner. Expect them to be a member of a professional
+                                association with a code of ethics.
+                            </li>
+                            <li>
+                                A health intake conversation about your medical conditions and your expectations for the
+                                massage. Also if you have any allergies to oils or lotions, please let your massage
+                                therapist know during the intake.
+                            </li>
+                            <li>
+                                The right and option to ask questions of the massage therapist and receive professional
+                                responses.
+                            </li>
+                            <li>
+                                The right to determine if there will be conversation, music or quiet during the massage.
+                            </li>
+                            <li>
+                                An explanation of the nature of the massage and techniques to be used before the start
+                                of the massage.
+                            </li>
+                            <li>
+                                The right to consent to the massage techniques and approaches, including the level of
+                                manual pressure, used in the massage and the ability to request adjustments to pressure
+                                at any time during the massage.
+                            </li>
+                            <li>
+                                The right to stop a massage and report anything they feel is inappropriate during the
+                                massage.
+                            </li>
+                            <li>
+                                Asked to take off only as much as you are comfortable removing. It is important to know
+                                that your massage will much more effective if the massage therapist can touch your skin
+                                without the restriction of clothing.
+                            </li>
+                            <li>
+                                Being draped appropriately by a sheet, towel or blanket, with only the area being
+                                massaged exposed. Depending on your requests, the massage therapist will either massage
+                                your entire body (except for private areas) or only those areas that are specified prior
+                                to the start of the massage.
+                            </li>
+                            <li>
+                                When the massage is over, the massage therapist will leave the room and allow you to get
+                                up and get dressed in privacy.
+                            </li>
+                        </ul>
+                        <br />
+                        <br />
+                        <br />
+                        <br /><br /><br /><br /><br />
+                        <h5>Expectations adopted from the American Massage Therapy Association<a href="https://www.amtamassage.org/globalassets/documents/resources/amta_expectations_for_your_massage_session_2017.pdf">(AMTA)</a>
                     </div>
                     <div class="col-xs-6">
-                        <img class="img-responsive img-full" src="img/IMG_0264_2.jpg" alt="" />
+                        <hr class="hr-long" />
+                        <h2 class="text-center">What the massage therapist expects</h2>
+                        <hr class="hr-long" />
+                        <ul>
+                            <li>Respect, courtesy and dignity.</li>
+                            <li>Treated as a health care professional.</li>
+                            <li>
+                                Complete and accurate disclosure of health/medical conditions during intake process.
+                            </li>
+                            <li>Communication of expectations of and concerns about the massage.</li>
+                            <li>
+                                Timely arrival at massage therapy appointment, payment at time of service and reasonable
+                                cancellation notice (usually 24 hours).
+                            </li>
+                            <li>
+                                The right to stop a massage and report anything they feel is inappropriate during the
+                                massage.
+                            </li>
+                        </ul>
+                        <div>
+                            <img class="img-center" src="img/IMG_0230.jpg" alt="" />
+                        </div>
                     </div>
                 </div>
             </div>
-            <!-- first block of pics -->
-            <div class="row">
-                <div class="box">
-                    <div class="col-xs-6">
-                        <img class="img-responsive img-full" src="img/IMG_0258_2.jpg" alt="" />
-                    </div>
-                    <div class="col-xs-6">
-                        <img class="img-responsive img-full" src="img/IMG_0255_2.jpg" alt="" />
-                        <p></p>
-                    </div>
-                </div>
-            </div>
+
             <!-- contact  block  -->
             <div class="row">
                 <div class="box">
