updates to the  more info page

--- a/public_html/more_info.html
+++ b/public_html/more_info.html
@@ -48,9 +48,9 @@
                 <div>
                     <ul class="nav navbar-nav">
                         <li><a href="index.html">Home </a></li>
-                        <li><a href="#">About</a></li>
+                        <li><a href="about.html">About</a></li>
                         <li><a href="services.html">Services</a></li>
-                        <li><a href="#">Facilities</a></li>
+                        <li><a href="facilities.html">Facilities</a></li>
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </div>
@@ -86,34 +86,146 @@
                         <hr />
                         <h2 class="text-center">More Information</h2>
                         <hr />
-                        <p class="text-center">
-                            This page is currently undergoing a redesign. <br />
-                            We will use this page to provide additional information on massage services.<br />
-                            Please check back soon for updates.<br />
+                        <p class="text-center">More information regarding types of massages.<br /></p>
+                    </div>
+                </div>
+            </div>
+            <!-- swedish -->
+            <div class="row">
+                <div class="box">
+                    <div class="col-xs-6">
+                        <hr />
+                        <h2 class="text-center">Swedish</h2>
+                        <hr />
+                        <img class="img-responsive img-full" src="img/swedish.jpg" alt="" />
+                    </div>
+                    <div class="col-xs-6">
+                        <br />
+                        <br />
+                        <br />
+                        <br />
+                        <br />
+                        <br />
+                        <br />
+
+                        <p>
+                            A Swedish massage should be top of your list if you’re looking for a way to relax, or if you
+                            want to experience your first treatment. <br /><br />
+                            It’s all about using long strokes and light-to-firm pressure that will leave you feeling
+                            rejuvenated. <br /><br />
+                            Typically your therapist will use five techniques: stroking and gliding, kneading, rubbing,
+                            tapping or pounding, and vibration. <br /><br />
+                            If you’re looking to reduce tension or suffering from anxiety then definitely opt for a
+                            Swedish massage.
                         </p>
                     </div>
                 </div>
             </div>
-            <!-- first block of pics -->
+            <!-- deep tissue -->
             <div class="row">
                 <div class="box">
                     <div class="col-xs-6">
-                        <img class="img-responsive img-full" src="img/IMG_0253_2.jpg" alt="" />
+                        <hr />
+                        <h2 class="text-center">Deep Tissue</h2>
+                        <hr />
+                        <img class="img-responsive img-full" src="img/deepTissue.jpg" alt="" />
                     </div>
                     <div class="col-xs-6">
-                        <img class="img-responsive img-full" src="img/IMG_0264_2.jpg" alt="" />
+                        <br />
+                        <br />
+                        <br />
+                        <br />
+                        <br />
+                        <br />
+                        <br />
+                        <p>
+                            As the name suggests, deep layers of muscle and the surrounding tissue are targeted with the
+                            aim of lengthening and relaxing deep tissue.<br /><br />
+                            This results in an intense treatment, as blood and nutrients are carried to your muscles,
+                            helping to eliminate toxins.<br /><br />
+                            It's believed that the treatment can help reduced pain compared to therapeutic massage.<br /><br />
+                        </p>
                     </div>
                 </div>
             </div>
-            <!-- first block of pics -->
+            <!-- hot stone -->
             <div class="row">
                 <div class="box">
                     <div class="col-xs-6">
-                        <img class="img-responsive img-full" src="img/IMG_0258_2.jpg" alt="" />
+                        <hr />
+                        <h2 class="text-center">Hot Stone</h2>
+                        <hr />
+                        <img class="img-responsive img-full" src="img/hotStone.jpg" alt="" />
                     </div>
                     <div class="col-xs-6">
-                        <img class="img-responsive img-full" src="img/IMG_0255_2.jpg" alt="" />
-                        <p></p>
+                        <br />
+                        <br />
+                        <br />
+                        <br />
+                        <br />
+                        <br />
+                        <p>
+                            When you book a hot stone massage you can expect smooth, heated stones made of volcanic rock
+                            to be placed on certain parts of your body.<br /><br />
+                            Typical places would be your spine, stomach, chest, face, palms, feet and toes.<br /><br />
+                            Cold stones may also be used to soothe the skin and calm swollen blood vessels.<br /><br />
+                            As well as sharing similar benefits with other forms of massage like relieving muscle
+                            tension and helping to promote better sleep, hot stone massage can treat painful conditions
+                            like rheumatoid arthritis (RA).
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <!-- Reflexology -->
+            <div class="row">
+                <div class="box">
+                    <div class="col-xs-6">
+                        <hr />
+                        <h2 class="text-center">Reflexology</h2>
+                        <hr />
+                        <img class="img-responsive img-full" src="img/foot.jpg" alt="" />
+                    </div>
+                    <div class="col-xs-6">
+                        <br />
+                        <br />
+                        <br />
+                        <br />
+                        <br />
+                        <br />
+                        <br />
+                        <p>
+                            Reflexology, also known as ‘zone therapy’, is about applying different levels of pressure to
+                            your hands, feet and ears.<br /><br />
+                            Theoretically it’s thought that these parts of your body are connected to certain organs and
+                            body systems.<br /><br />
+                            If you do suffer from pain and discomfort associated with a medical condition, reflexology
+                            may be helpful.<br /><br />
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <!-- Couples -->
+            <div class="row">
+                <div class="box">
+                    <div class="col-xs-6">
+                        <hr />
+                        <h2 class="text-center">Couples</h2>
+                        <hr />
+                        <img class="img-responsive img-full" src="img/couples.jpg" alt="" />
+                    </div>
+                    <div class="col-xs-6">
+                        <br />
+                        <br />
+                        <br />
+                        <br />
+                        <br />
+                        <br />
+                        <br />
+                        <p>
+                            As you may have guessed, this is not a massage for one but for two.<br /><br />
+                            Enjoy a treatment with your partner, friend or relative in the same room at the same
+                            time.<br /><br />
+                        </p>
                     </div>
                 </div>
             </div>
