updates to the  services page

--- a/public_html/services.html
+++ b/public_html/services.html
@@ -50,7 +50,7 @@
                           <div >
                             <ul class="nav navbar-nav">
                               <li><a href="index.html">Home </a></li>
-                              <li><a href="#">About</a></li>
+                              <li><a href="about.html">About</a></li>
                               <li><a href="#">Services</a></li>
                               <li><a href="facilities.html">Facilities</a></li>
                               <li><a href="contact.html">Contact</a></li>
@@ -90,7 +90,7 @@
                         <h2 class="text-center">Our Services</h2>
                         <hr />
                         <p class="text-center">
-                            We provide a range of massage services. 
+                            We provide a range of massage services for both men and women. 
                         </p>
                     </div>
                 </div>
@@ -107,17 +107,19 @@
                         <hr />
                         <p class="text-center">
                             <ul class="text-center list-unstyled">                            
-                                <li class="list-unstyled">Deep Tissue</li>
                                 <li class="list-unstyled">Swedish</li>
-                                <li class="list-unstyled">Reflexology</li>
+                                <li class="list-unstyled">Deep Tissue</li>                                
                                 <li class="list-unstyled">Hot Stone</li>
+                                <li class="list-unstyled">Reflexology/Foot</li>
                                 <li class="list-unstyled">Couples Massage</li>
-                                <li class="list-unstyled">Foot</li>
+                                <li class="list-unstyled"></li>
                                 <li class="list-unstyled"></li>
                             </ul>
                         <hr class="visible-xs" />
             
-                        <p></p>
+                        <br>
+                        <br>
+                        <br>
                     </div>                    
                     <div class="col-xs-6">
                         <hr />
