more page updates

--- a/public_html/expect.html
+++ b/public_html/expect.html
@@ -87,7 +87,7 @@
                         <h2 class="text-center">What to Expect</h2>
                         <hr />
                         <p class="text-center">
-                            This page is currently undergoing a redesign. Please check back soon for updates.
+                            A brief summary of expectations during a massage.
                         </p>
                     </div>
                 </div>
