--- a/public_html/services.html
+++ b/public_html/services.html
@@ -90,7 +90,7 @@
                         <h2 class="text-center">Our Services</h2>
                         <hr />
                         <p class="text-center">
-                            We provide a range of massage services for both men and women. 
+                            We provide a range of massage services for men, women and couples. 
                         </p>
                     </div>
                 </div>
